--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="card">
                 <div class="card__logo card__logo_red">24/7</div>
-                <h3>Мониторинг электроэнергии</h3>
+                <h3>Мониторингs электроэнергии</h3>
                 <p>Управляйте своей системой солнечных панелей из любой точки мира с помощью специального мобильного приложения.</p>
             </div>
             <div class="card">
@@ -49,7 +49,11 @@
         <div class="features__border"></div>
         <div class="features__feedback">
             <div class="features__feedback-left">
-                <h2>Нам доверяет<br>5000+ счастливых клиентов</h2>
+                <h2>
+                    Нам доверяет
+                    <br>
+                    <div class="features__clients-count">5000+</div> счастливых клиентов
+                </h2>
                 <p>Мы помогли тысячам людей перейти на зеленую энергию.<br>После заказа мы позаботимся обо всем: доставка панелей, проект, установка, помощь в использовании.</p>
             </div>
             <div class="features__feedback-right">
@@ -121,5 +125,6 @@
     </footer>
     <script src="fa/js/all.min.js"></script>
     <script src="js/canvas.js"></script>
+    <script src="js/animations.js"></script>
 </body>
 </html>
