--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <img class="header__logo" src="img/logo.svg" alt="Логотип компании">
         <div class="header__controls">
-            <a href="#contacts">Контакты</a>
+            <a href="#form">Контакты</a>
             <button>Заказать</button>
         </div>
     </header>
@@ -21,14 +21,14 @@
         <div class="about__info animate__animated animate__fadeInLeft animate__repeat-1">
             <h1>Солнечные панели GreenRobotic</h1>
             <p>Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
-            <button>Узнать подробнее <i class="fa-solid fa-angle-right"></i></button>
+            <button class="more-button" href="#features">Узнать подробнее <i class="fa-solid fa-angle-right"></i></button>
         </div>
         <div class="about__images animate__animated animate__fadeInRight animate__repeat-1">
             <img src="img/sun.png" alt="Солнышко" class="about__sun-image">
             <img src="img/solar-panel.png" alt="Солнечная панель" class="about__image">
         </div>
     </section>
-    <section class="features">
+    <section class="features" id="features">
         <div class="cards">
             <div class="card">
                 <div class="card__logo card__logo_yellow"><i class="fa-solid fa-solar-panel"></i></div>
@@ -66,7 +66,7 @@
         <div class="promo__image"></div>
         <div class="promo__right"><div class="promo__card"><h2>Зарядите свой дом</h2><p><i class="fa-solid fa-circle"></i>Солнечные панели сертифицированы мировыми экспертами: система безопасна и надежна.</p><p><i class="fa-solid fa-circle"></i>Следите за накоплением энергии вашего дома в режиме реального времени и настраивайте процент расхода и накопления энергии.</p><div class="promo__button"><button>Заказать<i class="fa-solid fa-chevron-right"></i></button></div></div></div>
     </section>
-    <section class="form">
+    <section class="form" id="form">
         <div class="form__container">
             <h1>Оставьте свои контакты</h1>
             <p>Поможем подобрать модель. <br>Выбрать удобный вариант доставки и установки. <br>Гарантия возврата денег.</p>
@@ -90,7 +90,7 @@
                         <option value="10–30">10 000₽ – 30 000₽</option>
                         <option value="30–60">30 000₽ – 60 000₽</option>
                         <option value="60–100">60 000₽ – 100 000₽</option>
-                        <option value="100+">100 000₽</option>
+                        <option value="other">Другое</option>
                     </select>
                 </div>
                 <button type="submit" class="form__submit">Отправить заявку</button>
